Finally, links are actually collapsing correctly.

--- a/client/app/styles/app.scss
+++ b/client/app/styles/app.scss
@@ -94,6 +94,14 @@ audio:focus {
   position: relative;
 }
 
+.default-text-size {
+  font-size: 1.3rem;
+
+  @media (max-width: 500px) {
+    font-size: 1.1rem;
+  }
+}
+
 .hot-link {
   text-decoration: none !important;
   display: inline-block;
